@@ -1,5 +1,9 @@
 2000-10-18  Eric Melski  <ericm@ajubasolutions.com>
 
+	* library/tkfbox.tcl (OkCmd): Applied patch from [Bug: 6365],
+	which adds safety for directory names containing spaces or which
+	are non-lists.
+
 	* win/tkWinDialog.c (GetFileNameW, GetFileNameA, 
 	Tk_ChooseColorObjCmd, Tk_ChooseDirectoryObjCmd): Added error
 	checking for the return value from the common dialog functions, so
